--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ grpcio-tools==1.51.3
 numpy==1.21.5
 protobuf==4.24.4
 scikit_learn==1.1.1
-torch
+torch==2.2.0
 torchvision
 torchpippy==0.2.0
 packaging
